--- a/src/functions/users/index.functions.yml
+++ b/src/functions/users/index.functions.yml
@@ -1,8 +1,8 @@
-createUser: 
+createUserAdmin: 
     handler: src/functions/users/create.handler
     environment: ${file(environment/variables.yml):CREATE_USER_ENV}
     events:
         - http:
             method: post
-            path: users
+            path: admin/users
             cors: true
