--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
     "description": "Serverless webpack example using Typescript",
     "main": "handler.js",
     "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
+        "start": "sls offline start"
     },
     "dependencies": {
+        "bcrypt": "^4.0.1",
         "class-transformer": "^0.2.3",
         "class-transformer-validator": "^0.8.0",
         "class-validator": "^0.11.0",
@@ -14,13 +15,18 @@
         "lodash": "^4.17.15",
         "middy": "^0.33.2",
         "mysql": "^2.18.1",
+        "reflect-metadata": "^0.1.13",
         "source-map-support": "^0.5.10",
-        "typeorm": "^0.2.24"
+        "token-generator": "^1.0.0",
+        "typeorm": "^0.2.24",
+        "uuid": "^7.0.2"
     },
     "devDependencies": {
         "@types/aws-lambda": "^8.10.17",
+        "@types/bcrypt": "^3.0.0",
         "@types/lodash": "^4.14.149",
         "@types/node": "^10.12.18",
+        "@types/uuid": "^7.0.0",
         "fork-ts-checker-webpack-plugin": "^3.0.1",
         "serverless": "^1.65.0",
         "serverless-offline": "^5.12.1",
