--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,11 +6,12 @@
     "removeComments": true,
     "moduleResolution": "node",
     "noUnusedLocals": true,
-    "noUnusedParameters": true,
+    "noUnusedParameters": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
+    "allowUnusedLabels": true,
     "sourceMap": true,
     "target": "es2017",
     "outDir": "lib"
