Se agregó el servicio para obtener la informacion de un usuario ADMIN

--- a/src/functions/users/index.functions.yml
+++ b/src/functions/users/index.functions.yml
@@ -6,3 +6,12 @@ createUserAdmin:
             method: post
             path: admin/users
             cors: true
+
+infoUserAdmin:
+    handler: src/functions/users/info-admin.handler
+    environment: ${file(environment/variables.yml):INFO_USER_ADMIN_ENV}
+    events:
+        - http:
+            method: get
+            path: users/{userId}
+            cors: true
