--- a/environment/variables.yml
+++ b/environment/variables.yml
@@ -1,9 +1,12 @@
 DB_CONNECTION: &DB_CONNECTION
   DB_PORT: 3306
-  DB_HOST: remotemysql.com
-  DB_SCHEMA: Adaswordwr
-  DB_USERNAME: Adaswordwr
-  DB_PASSWORD: R5IRrNOrJm
+  DB_HOST: localhost
+  DB_SCHEMA: ventasmm
+  DB_USERNAME: root
+  DB_PASSWORD: alma123
 
 CREATE_USER_ENV:
+  <<: *DB_CONNECTION
+
+INFO_USER_ADMIN_ENV:
   <<: *DB_CONNECTION
